Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36865

QSerialPort::open() useless warning in windows

    XMLWordPrintable

Details

    • 336fbee2e34c7eaf48550105d542cad1979c6684

    Description

      There's warning that can't be avoided and it's probably useless. It comes allways when opening port. Can be reproduced for example QtSerialPort manual test.

      void __thiscall QSerialPortPrivate::detectDefaultSettings(void): Unexpected flow control settings
      

      It's caused because flowcontrol is not initialized when opening port. And it can't be done before open.

      Suggestion is to initialize it in QSerialPortPrivate::open() like other settings:

         currentDcb.fRtsControl = RTS_CONTROL_DISABLE;
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpapp Laszlo Papp
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes