Remove the continuous warning about the unknown flow control

Task-number: QTBUG-36865

Change-Id: I332901ad0118f1176b0d3b8e45c8000f0dfb59ee
Reviewed-by: Sergey Belyashov <Sergey.Belyashov@gmail.com>
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>